@@ -56,6 +56,7 @@ Template for new versions:
 ## New Features
 
 ## Fixes
+- prevent hang when buildings in zones are destroyed in the case where the buildings were not added to the zone in the same order that they were created (uncommon)
 - `buildingplan`: improved performance in forts with large numbers of items
 
 ## Misc Improvements
